Set QtQuickControls theme in QPT

Summary:
Currently we set QT_QUICK_CONTROLS_STYLE in startkde.

This causes problems as we're setting vars that meddle with other
developers setups. Especially if they're using QGuiApplication which
will instantly crash when using the desktop theme.

By moving the setting inside the QPT we can:
- only affect QApplications
- only affect apps that are desktopSettingsAware

If this env is already explicitly set by someone else, that has
precedence.

Also if this ever does move from being an env variable, we will probably
want to add the code here.

BUG: 384466
BUG: 384481

Test Plan:
Unset env
Ran systemsettings5 the scrollbar was the correct colour

Reviewers: #plasma, gladhorn

Reviewed By: #plasma, gladhorn

Subscribers: gladhorn, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D7935