src/platformtheme/kdeplatformtheme.cpp
@@ -53,6 +53,7 @@ KdePlatformTheme::KdePlatformTheme()
         m_x11Integration.reset(new X11Integration());
         m_x11Integration->init();
     }
+    setQtQuickControlsTheme();
 }
 
 KdePlatformTheme::~KdePlatformTheme()
@@ -305,4 +306,18 @@ QPlatformSystemTrayIcon *KdePlatformTheme::createPlatformSystemTrayIcon() const
     }
 
     return new KDEPlatformSystemTrayIcon;
+}
+
+//force QtQuickControls2 to use the desktop theme as default
+void KdePlatformTheme::setQtQuickControlsTheme()
+{
+    //if the user has explicitly set something else, don't meddle
+    if (qEnvironmentVariableIsSet("QT_QUICK_CONTROLS_STYLE")) {
+        return;
+    }
+    //if the user is running only a QGuiApplication. Abort as this style is all about QWidgets and we know setting this will make it crash
+    if (!qobject_cast<QApplication*>(qApp)) {
+        return;
+    }
+    qputenv("QT_QUICK_CONTROLS_STYLE", "org.kde.desktop");
 }
